nullaway_error_75061bbe-9aa1-4855-b247-f66a439b84a0.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/RemoteRegionRegistry.java:507: error: [NullAway] dereferenced expression applications.get() is @Nullable
        for (Application app : applications.get().getRegisteredApplications()) {
                                                 ^
